# cpp_template

./: .gitignore  CMAKELISTS.txt  README.md
cmake/: Conan.cmake  FetchGoogleTest.cmake  Libraries.cmake  Utils.cmake  config.cmake
docs/: Building_and_Running_the_Project.md  CMake_Configuration.md  Conan_package_manager.md
include/: conf.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md  test_main.cc
